[gd_scene load_steps=2 format=3 uid="uid://dt11i3fli5afj"]

[ext_resource type="Script" uid="uid://c0oyytjq0m1fi" path="res://ASSETS/controllers/scripts/end_level_menu.gd" id="1_ij351"]

[node name="EndLevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij351")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 71.0
offset_right = 748.0
offset_bottom = 571.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Next Level" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Next Level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
